# turn-closure-audit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  __init__.py  candidate_ledger.py  candidate_schema.py  classification.py  clock.py  commands.py  distillation.py  events.py  paths.py  plugin.yaml  promotion.py  pyproject.toml  receipts.py  redaction.py  runtime.py  storage.py  turn_closure_audit.py
.github/workflows/: ci.yml
docs/: architecture.md  memory.stack.contract.md
docs/plans/: 2026.05.17.candidate.governance.md
scripts/: check.release.py
tests/: test_candidate_ledger.py  test_candidate_schema.py  test_distillation.py  test_promotion.py  test_turn_closure_audit.py
